@@ -70,6 +70,15 @@
 #define DDA0	0
 
 #define PORTA	_SFR_IO8(0X02)
+#define PORTA7 7
+#define PORTA6 6
+#define PORTA5 5
+#define PORTA4 4
+#define PORTA3 3
+#define PORTA2 2
+#define PORTA1 1
+#define PORTA0 0
+/* Below for backwards compatibility. */
 #define PA7	7
 #define PA6	6
 #define PA5	5
@@ -100,6 +109,15 @@
 #define DDB0	0
 
 #define PORTB	_SFR_IO8(0x05)
+#define PORTB7 7
+#define PORTB6 6
+#define PORTB5 5
+#define PORTB4 4
+#define PORTB3 3
+#define PORTB2 2
+#define PORTB1 1
+#define PORTB0 0
+/* Below for backwards compatibility. */
 #define PB7	7
 #define PB6	6
 #define PB5	5
@@ -130,6 +148,15 @@
 #define DDC0	0
 
 #define PORTC	_SFR_IO8(0x08)
+#define PORTC7 7
+#define PORTC6 6
+#define PORTC5 5
+#define PORTC4 4
+#define PORTC3 3
+#define PORTC2 2
+#define PORTC1 1
+#define PORTC0 0
+/* Below for backwards compatibility. */
 #define PC7	7
 #define PC6	6
 #define PC5	5
@@ -160,6 +187,15 @@
 #define DDD0	0
 
 #define PORTD	_SFR_IO8(0x0B)
+#define PORTD7 7
+#define PORTD6 6
+#define PORTD5 5
+#define PORTD4 4
+#define PORTD3 3
+#define PORTD2 2
+#define PORTD1 1
+#define PORTD0 0
+/* Below for backwards compatibility. */
 #define PD7	7
 #define PD6	6
 #define PD5	5
